Fix close icon alignment in Jetpack Map block popover

--- a/extensions/blocks/map/add-point/style.scss
+++ b/extensions/blocks/map/add-point/style.scss
@@ -35,7 +35,7 @@
 	}
 }
 .component__add-point__close {
-	margin: 0;
+	margin: 0.4rem 0 0;
 	padding: 0;
 	border: none;
 	box-shadow: none;
